syntax = "proto3";
package friend_list;
option go_package = "tinytiktok/user/proto/friendlist";

message FriendListRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message FriendListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated FriendUser user_list = 3; // 用户列表
}

message FriendUser {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
  optional string message = 12; // 和该好友的最新聊天消息
  int64 msgType = 13; // message消息的类型，0 => 当前请求用户接收的消息， 1 => 当前请求用户发送的消息
}
